#ifndef INCLUDE_GAME_PLAINPOSITION_H_
#define INCLUDE_GAME_PLAINPOSITION_H_

struct PlainPosition
{
    double x;
    double y;
};

#endif // INCLUDE_GAME_PLAINPOSITION_H_